--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   vertical-align: bottom;
   background-position: 100% 100%;
   background-size: 100% 100%;
+  background-attachment:inherit;
 }
 #all {
   flex-direction: row;
