--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
+
+
 h1 {
   color: blue;
   font-family: "Franklin Gothic Medium";
 }
 body {
-  background-image: url("mario-fundo.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  object-fit: cover;
-  vertical-align: bottom;
-  background-position: 100% 100%;
-  background-size: 100% 100%;
-  background-attachment:inherit;
+  display: flex;
+  flex-direction:column-reverse;
+  min-height: 100vh;
 }
 #all {
   flex-direction: row;
+  background-image: url("mario-fundo.png");
+  background-repeat: no-repeat;
+  background-position: center,center;
+  object-fit: cover;
+  vertical-align: bottom;
+  background-position: 0%, 0%;
+  background-size: 1100px ,800px;
 }
+
 #image1{ 
-  max-width: 300px; max-height: 250px 
+  width: 300px; 
+  height: 250px;
+}
+h2{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+color:rgba(39, 131, 20, 0.76)
 }
